--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-    background-image: url('www.imageupload.co.uk/image/BIzf');
+    background-image: url('http://www.imageupload.co.uk/images/2017/05/26/octopus-wallpaper-66cd30.jpg');
     height: 100%;
     background-position: center;
     background-size: cover;
