--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {
 
 .bgimg {
     /* Background image */
-    background-image: url('/w3images/forestbridge.jpg');
+    background-image: url('http://www.imageupload.co.uk/images/2017/05/26/octopus-wallpaper-66cd30.jpg');
     /* Full-screen */
     height: 100%;
     /* Center the background image */
