--- a/index.html
+++ b/index.html
@@ -1,6 +1,62 @@
 <!DOCTYPE html>
 <html>
-<body background="http://www.imageupload.co.uk/images/2017/05/26/octopus-wallpaper-608e4c.jpg">
-<h1>coming soon!</h1>
+<style>
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bgimg {
+    background-image: url('http://www.imageupload.co.uk/images/2017/05/26/octopus-wallpaper-608e4c.jpg');
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    color: white;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 25px;
+}
+
+.topleft {
+    position: absolute;
+    top: 0;
+    left: 16px;
+}
+
+.bottomleft {
+    position: absolute;
+    bottom: 0;
+    left: 16px;
+}
+
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+hr {
+    margin: auto;
+    width: 40%;
+}
+</style>
+<body>
+
+<div class="bgimg">
+  <div class="topleft">
+    <p>Sintayi</p>
+  </div>
+  <div class="middle">
+    <h1>COMING SOON</h1>
+    <hr>
+    <p>35 days left</p>
+  </div>
+  <div class="bottomleft">
+    <p>No Hot Dog</p>
+  </div>
+</div>
+
 </body>
 </html>
