--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ hr {
 // Set the date we're counting down to
 var countDownDate = new Date("JUL 5, 2017 15:37:25").getTime();
 
+window.alert("Θα σας δείξω οκτώ διαφορετικούς τρόπους για να μαγειρέψετε το χταπόδι!");
+
 // Update the count down every 1 second
 var countdownfunction = setInterval(function() {
 
