--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ hr {
     <p id="demo" style="font-size:30px"></p>
   </div>
   <div class="bottomleft">
-    <p>NO HOT DOG</p>
+    <p>NO HOT DOG, but I will show you how to cook Octapus 8 different ways</p>
   </div>
 </div>
 
