--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-    background-image: url('http://www.imageupload.co.uk/images/2017/05/26/octopus-wallpaper-608e4c.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2014/11/21/16/30/submarine-540762_960_720.jpg');
     height: 100%;
     background-position: center;
     background-size: cover;
