--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-    background-image: url('https://cdn.pixabay.com/photo/2014/11/21/16/30/submarine-540762_960_720.jpg');
+    background-image: url('http://www.guanchaoge.com/data/out/103/56160060-octopus-wallpapers.jpg');
     height: 100%;
     background-position: center;
     background-size: cover;
