--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <link rel="icon" type="image/png"
+     href="http://www.freepngimg.com/thumb/octopus/1-2-octopus-png-thumb.png" />
+    
+    
 <link rel="stylesheet" href="test.css">
 <video poster="https://sonectar.files.wordpress.com/2014/03/stevie.jpg" id="bgvid" playsinline autoplay muted loop>
 <source src="343379421.mp4" type="video/mp4">
 </video>
-<div id="polina">
+<div id="Sintayi">
 <h1>Sintayi</h1>
 <p>The greek work for recipe
 <p>Cooking recipes, image recognition and artificial inteligence in the cloud!</p>
