--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <video poster="https://sonectar.files.wordpress.com/2014/03/stevie.jpg" id="bgvid" playsinline autoplay muted loop>
 <source src="343379421.mp4" type="video/mp4">
 </video>
-<div id="Sintayi">
+<div id="sintayi">
 <h1>Sintayi</h1>
 <p>The greek work for recipe
 <p>Cooking recipes, image recognition and artificial inteligence in the cloud!</p>
