--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@ function myFunction() {
     }
     document.getElementById("demo").innerHTML = txt;
 }
+    $(function(){
+    var mobile;
+    if (window.width <= 479) {
+        //don't load these scripts 
+    }
+    else {
+        //load all scripts
+    }
+});
+    
 </script>
 </div>
 </html>
