--- a/index.html
+++ b/index.html
@@ -42,4 +42,17 @@ function myFunction() {
     
 </script>
 </div>
+    <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCkXGzoC45LAPEY0O8FOKHJGx5E0lvgJKU",
+    authDomain: "sintayi-3e06d.firebaseapp.com",
+    databaseURL: "https://sintayi-3e06d.firebaseio.com",
+    projectId: "sintayi-3e06d",
+    storageBucket: "sintayi-3e06d.appspot.com",
+    messagingSenderId: "396947128175"
+  };
+  firebase.initializeApp(config);
+</script>
 </html>
